Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job_Result__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(NOT(ISBLANK( End_Time__c )),(End_Time__c - Start_Time__c)*24*60*60,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (in seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>