Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job_Result__c/fields/External_CI_Job__c.field-meta.xml
<CustomField>
    <fullName>External_CI_Job__c</fullName>
    <label>External CI Job</label>
    <referenceTo>External_CI_Job__c</referenceTo>
    <relationshipLabel>External CI Job Results</relationshipLabel>
    <relationshipName>External_CI_Job_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>