Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job_Result__c/fields/External_CI_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>External_CI_Job_ID__c</fullName>
    <label>External CI Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>