Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job_Result__c/fields/Job_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_URL__c</fullName>
    <label>Job URL</label>
    <type>Url</type>
</CustomField>