Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job_Result__c/fields/Job_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_URL_Link__c</fullName>
    <formula>if(ISBLANK(Job_URL__c), 
  &quot;&quot;,
  HYPERLINK(Job_URL__c, &quot;View in &quot;&amp;TEXT( External_CI_Job__r.External_CI_Setting__r.CI_Tool__c ))
)</formula>
    <label>Job URL Link</label>
    <type>Text</type>
</CustomField>